@@ -13,12 +13,12 @@ public record DatingSolution(int score, LinkedHashMap<Salarie, Besoin> assignati
         List<String> lines = Files.readAllLines(Paths.get(filePath));
 
         // Récupérer la première ligne pour le score
-        int score = Integer.parseInt(lines.get(0));
+        int score = Integer.parseInt(lines.getFirst().split(";")[0]);
 
         for (int i = 1; i < lines.size(); i++) {
             String[] parts = lines.get(i).split(";");
             String clientName = parts[0];
-            String skill = parts[1].split(";")[0];
+            String skill = parts[1];
             String salarieName = parts[2];
 
             SkillType skillType = SkillType.valueOf(skill);
